[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "noredis"
version = "0.1.0"
description = "Redis + Celery replacement. Cache, Queue, Scheduler — backed by SQLite. Zero servers."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Ayush" },
]
keywords = ["cache", "queue", "sqlite", "redis", "celery", "background-jobs", "scheduler", "task-queue"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Distributed Computing",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.9.0",
    "pre-commit>=3.0",
]

[project.urls]
Homepage = "https://github.com/Ayush-e4/noredis"
Documentation = "https://github.com/Ayush-e4/noredis#readme"
Repository = "https://github.com/Ayush-e4/noredis"
Issues = "https://github.com/Ayush-e4/noredis/issues"
Changelog = "https://github.com/Ayush-e4/noredis/blob/main/CHANGELOG.md"

[project.scripts]
noredis = "noredis.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["noredis*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["noredis"]